--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>android-data</module>
         <module>android-data-tests</module>
+        <module>android-data-sample-app</module>
     </modules>
 
     <properties>
