--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
             <artifactId>android-test</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.android.data</groupId>
+            <artifactId>android-data</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>apklib</type>
+        </dependency>
     </dependencies>
 
     <build>
