Step towards simple put,get. Using inmemory for now. But tests are running in android

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <module>android-data</module>
         <module>android-data-tests</module>
-        <module>android-data-sample-app</module>
+        <!--<module>android-data-sample-app</module>-->
     </modules>
 
     <properties>
