--- a/android-data/pom.xml
+++ b/android-data/pom.xml
@@ -38,6 +38,12 @@
             <version>${touchdb.version}</version>
             <type>apklib</type>
         </dependency>
+
+        <dependency>
+            <groupId>org.roboguice</groupId>
+            <artifactId>roboguice</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
