--- a/android-data/AndroidManifest.xml
+++ b/android-data/AndroidManifest.xml
@@ -5,6 +5,7 @@
           android:versionName="1.0">
     <application android:label="@string/app_name">
 
+        <service android:name=".services.DataService"/>
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
