--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,11 @@
           package="com.android.data"
           android:versionCode="1"
           android:versionName="1.0">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <instrumentation
             android:name="android.test.InstrumentationTestRunner"
             android:targetPackage="com.android.data"/>
