--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application android:label="@string/app_name">
-        <service android:name=".services.DataService" />
+        <service android:name=".DataService" />
     </application>
 </manifest>
