--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 before_install:
   - wget http://dl.google.com/android/android-sdk_r20.0.3-linux.tgz
   - tar -zxf android-sdk_r20.0.3-linux.tgz
-  - export ANDROID_HOME=~/builds/data-sync/android-data/android-sdk-linux
+  - export ANDROID_HOME=`pwd`/android-sdk-linux
   - export PATH=$PATH:$ANDROID_HOME/tools:$ANDROID_HOME/platform-tools
   - android update sdk --no-ui --filter android-15,extra-android-support,platform-tools,system-image
   - echo no | android create avd -n emulator -t android-15 --skin WVGA800 --abi x86 --force
